--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -2,12 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/nav_all_matches"
-        android:title="All Matches"
-        android:icon="@drawable/ic_all_matches"/>
+        android:title="All Matches"/>
 
     <item
         android:id="@+id/nav_saved_matches"
-        android:title="Saved Matches"
-        android:icon="@drawable/ic_saved_matches"/>
+        android:title="Saved Matches"/>
+
 </menu>
 
